<resources>
    <string name="app_name">Store</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="image">Image</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="email_already_exist">Email already exites</string>
    <string name="error_in_connection">Error in connection</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="action_settings">Settings</string>
    <string name="get_book">Get Book</string>
    <string name="upload_book">Upload Book</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="description">Desciption</string>
</resources>
