<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    tools:context="com.example.theeagle.store.Activities.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:orientation="vertical"
        tools:context="com.example.theeagle.store.Activities.MainActivity">

        <ImageView
            android:id="@+id/book_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_40dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_logo_black" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/book_image"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:background="@drawable/shape"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:padding="@dimen/margin_8"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="@dimen/text_size_24" />

            <EditText
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:background="@drawable/shape"
                android:hint="@string/description"
                android:padding="@dimen/margin_8"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="@dimen/text_size_24" />

            <EditText
                android:id="@+id/price_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:background="@drawable/shape"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:padding="@dimen/margin_8"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="@dimen/text_size_24" />

        </LinearLayout>

        <Button
            android:id="@+id/set_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape"
            android:paddingLeft="@dimen/margin_50dp"
            android:paddingRight="@dimen/margin_50dp"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="#fff"
            android:layout_margin="@dimen/margin_4"
            android:textSize="@dimen/text_size_24"/>

        <Button
            android:id="@+id/get_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/set_date"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_8"
            android:background="@drawable/shape"
            android:paddingLeft="@dimen/margin_50dp"
            android:paddingRight="@dimen/margin_50dp"
            android:text="@string/get_book"
            android:textColor="#fff" />

        <Button
            android:id="@+id/add_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/get_book"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_8"
            android:background="@drawable/shape"
            android:paddingLeft="@dimen/margin_50dp"
            android:paddingRight="@dimen/margin_50dp"
            android:text="@string/upload_book"
            android:textColor="#fff" />

    </RelativeLayout>
</ScrollView>